Added politicians list
